# serializer version: 1
# name: test_event_key
  <enum 'EventKey'>
# ---
# name: test_event_subtype
  <enum 'EventSubType'>
# ---
# name: test_event_type
  <enum 'EventType'>
# ---
# name: test_query_parameter
  <enum 'QueryParameter'>
# ---
